book/tests/snapshots/snapshot__run_reference_prql@stdlib-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/stdlib-0.prql
---
SELECT
  *,
  CAST(salary + payroll_tax AS int) AS gross_salary,
  ROUND(CAST(salary + payroll_tax AS int), 0) AS gross_salary_rounded
FROM
  employees
