book/tests/snapshots/snapshot__run_reference_prql@strings-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/strings-2.prql
---
SELECT
  '"hello world"' AS x
