book/tests/snapshots/snapshot__run_reference_prql@syntax-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-0.prql
---
SELECT
  first_name,
  last_name
FROM
  employees
WHERE
  department = 'Product'
