book/tests/snapshots/snapshot__run_reference_prql@syntax-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-1.prql
---
SELECT
  first_name,
  last_name
FROM
  employees
WHERE
  department = 'Product'
