book/tests/snapshots/snapshot__run_reference_prql@syntax-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-3.prql
---
SELECT
  first_name
FROM
  employees
